lib.h

#ifndef _TEST_H_
#define _TEST_H_

#ifdef __cplusplus
extern "C"
{
#endif

#include <stdlib.h>
#include <stdio.h>
#include <string.h>

    int ints(int, int);

    float floats(float, float);

    double doubles(double, double);

    char *strings(char *, char *);

#ifdef __cplusplus
}
#endif

#endif /* _TEST_H_ */